--- a/list.html
+++ b/list.html
@@ -7,19 +7,19 @@
 <body>
 	<img src="lab3 image/logo.jpg">
 	<img src="lab3 image/suc.jpg">
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html" >网站首页</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">关于我们</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">新闻中心</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">苗木基地</a>	
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">产品中心</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">成功案例</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">联系我们</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">行业资讯</a>
+	<a href="#" >网站首页</a>
+	<a href="#">关于我们</a>
+	<a href="#">新闻中心</a>
+	<a href="#">苗木基地</a>	
+	<a href="#">产品中心</a>
+	<a href="#">成功案例</a>
+	<a href="#">联系我们</a>
+	<a href="#">行业资讯</a>
 	<img src="lab3 image/suc2.jpg">
 	<br/>
 	<h4>》<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">网站首页</a>-新闻中心</h4>
 	<br/>
-		<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">成功案例</a><br/>
+	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">成功案例</a><br/>
 	<img src="lab3 image/f1.jpg" width="200" height="100"><br/>
 	<img src="lab3 image/f1.jpg" width="200" height="100"><br/>
 	<a href="">热点新闻</a><br/>
