--- a/lab6 新闻页.html
+++ b/lab6 新闻页.html
@@ -37,68 +37,104 @@
 		<tr>
 			<table>
 				<tr>
-					<td width="20%"></td>
-					<td>
-						<table>
-							<tr>
+					<table>
+						<tr>
+							<td width="50%"></td>
+							<td><img src="./lab6 image/pic.jpg">
+							</td>
 								<td>
-										<h3>学校概况&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<hr></h3>
-										<ul>
-											<li><a href="#"><font size="2.5" color="blue">学校简介</font></a></li>
-											<li><a href="#"><font size="2.5" color="blue">现任领导</font></a></li>
-											<li><a href="#"><font size="2.5" color="blue">光荣历史</font></a></li>
-											<li><a href="#"><font color="green" size="2.5">所获荣誉</font></a></li>
-											<li><a href="#"><font size="2.5" color="blue">图说河中</font></a></li>
-										</ul>
+									<img src="./lab6 image/news_pic_title.gif" alt="河中新闻" usemap="#Map1"/>
+									<map name="Map1" id="Map1">
+										<area shape="rect" coords="386，21.430.44" href="list.html?type=河中新闻">
+									</map>
+								<ul>
+									<li><a href="#"><font size="2"  color="blue">【家长学校1306期】大学主要的专业介绍</a>2015-12-10</font></li>
+									<li><a href="#"><font size="2"  color="blue">[图文]化学老师于文英举办观摩课活动</a>2015-12-10</font></li>
+									<li><a href="#"><font size="2"  color="blue">[图文]本部数学组组织公开课教学[</a>2015-12-10</font></li>
+									<li><a href="#"><font size="2"  color="blue">[图文]校工会组织教职工广场舞展示、交流活动</a>2015-12-10</font></li>
+									<li><a href="#"><font size="2"  color="blue">[图文]生物教师开展观摩课活动</a>2015-12-10</font></li>
+									<li><a href="#"><font size="2"  color="blue">[图文]首届”五四杯“青年篮球对抗赛成功举办</a>2015-12-10</font></li>
+									<li><a href="#"><font size="2"  color="blue">[图文]高二理科部召开第二次月考表彰大会</a>2015-12-10</font></li>
+									<li><a href="#"><font size="2"  color="blue">[图文]加强消防培训，确保学生安全</a>2015-12-10</font></li>
+								</ul>
 								</td>
-								<td rowspan="2">
-									<h4>所获荣誉&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<hr></h4>
+								<td><img src="./lab6 image/notice_title.gif">
 									<ul>
-										<li><a href="#"><font size="2"  color="blue">[图文]我校被授予“2012年高中教学先进单位”“2012年高中增值奖”等荣誉称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校被评为“2010-2011年度文明单位”</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校被授予“河北省体育传统项目学校”荣誉称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校被授予“影子教师”培训基地</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校荣获“2010-2012年石家庄市创先争优先进基层党组织荣誉称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校荣获石家庄市妇联系统先进集体称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校离退休干部党支部被评为”现金离退休干部党支部“荣誉称号</a>2015-05-10</font></font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校荣获”2010年度住房公积金管理先进单位“荣誉称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[图文]我校荣获石家庄市”2010年度实绩突出领导班子“荣誉称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校荣获首批”河北省现代教育技术示范学校“</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[图文]我校被授予“2012年高中教学先进单位”“2012年高中增值奖”等荣誉称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校被评为“2010-2011年度文明单位”</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校被授予“河北省体育传统项目学校”荣誉称号</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校被授予“影子教师”培训基地</a>2015-05-10</font></li>
-										<li><a href="#"><font size="2"  color="blue">[组图]我校荣获“2010-2012年石家庄市创先争优先进基层党组织荣誉称号</a>2015-05-10</font></li>
-
+										<li><a href="#"><font size="2"  color="blue">河北中学男子篮球体育特长生招生简章(2015.04.11)</font></a></li>
+										<li><a href="#"><font size="2"  color="blue">河北中学音乐特长生复试名单(2015-04-08)</font></a></li>
+										<li><a href="#"><font size="2"  color="blue">河北中学2015年艺术特长生招生简章(2015-03-01)</font></a></li>
 									</ul>
-									<a href="#"><font size="2"  color="blue"><font size="2"  color="blue">上一页</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<a href="#"><font size="2"  color="blue">1</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<a href="#"><font size="2"  color="blue">2</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<font size="2"  color="blue">3</font>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<a href="#"><font size="2"  color="blue">4</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<a href="#"><font size="2"  color="blue">5</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<a href="#"><font size="2"  color="blue">6</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<a href="#"><font size="2"  color="blue">下一页</font></a>
 								</td>
-							</tr>
+								<td width="20%"></td>
+							<td width="30%"></td>
+							
+					</table>
+				</tr>
+				<tr>
+					<table>
+						<tr>
+							<td width="37.5%"></td>
+							<td colspan="2" >
+									<img src="./lab6 image/news_jy_title.gif" alt="河中教研网" usemap="#Map2"/>
+									<map name="Map2" id="Map2">
+										<area shape="rect" coords="439,11,481,33" href="list.html?type=河中教研网">
+									</map>
+							</td>
+							<td colspan="2">
+									<img src="./lab6 image/news_dy_title.gif" alt="河中德育网" usemap="#Map3"/>
+									<map name="Map3" id="Map3">
+										<area shape="rect" coords="439,11,481,33" href="list.html?type=河中德育网">
+									</map>
+							</td>
+							<td width="30%"></td>
+						</tr>
+						<tr>
+							<td width="30%"></td>
+							<td><img src="./lab6 image/news_jy_pic.gif"></td>
+							<td>
+								<ul>
+									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]化学老师于文英举办观摩课活动</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]本部教学组织公开课教学校调研</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]生物老师开展观摩课</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[教学交流][组图][文科部高一年级召开期中考试分析…</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[教与学][图文]【教与学】打破思维定势走出误区…</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[教学交流][组图]石家庄市教科所专家来我</a></font></li>
+								</ul>
+							</td>
+							<td><img src="./lab6 image/news_dy_pic.gif"></td>
+							<td>
+								<ul>
+									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]化学老师于文英举办观摩课活动</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]本部教学组织公开课教学校调研</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]生物老师开展观摩课</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[教学交流][组图][文科部高一年级召开期中考试分析…</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[教与学][图文]【教与学】打破思维定势走出误区…</a></font></li>
+									<li><a href="#"><font size="2"  color="blue">[教学交流][组图]石家庄市教科所专家来我</a></font></li>
+								</ul>
+							</td>
+							<td width="37.5%"></td>
+						<table width="81.5%">	
 							<tr>
-								<td>
-								<table>
-									<tr><td>
-									<img src="./lab6 image/tjpic.gif">
-									</td></tr>
-									<tr><td>
-									<img src="./lab6 image/pic.gif">
-									</td></tr>
-									<tr><td><<font size="2.5">
-									[组图]我校被评为“石家庄市<br>2010-2011年度文明单位”
-									</font></td></tr>
-								</table>
+								<td width="100%"></td>
+								<td colspan="2" width="50%">
+									<img src="./lab6 image/gnq.gif" alt="热点区域" usemap="#Map4"/>
+									<map name="Map4" id="Map4">
+										<area shape="rect" coords="144,133,250,240" href="lab6 首页.html#河中视频">
+										<area shape="rect" coords="12,129,119,239" href="lab6 首页.html#通讯录">
+										<area shape="rect" coords="9,6,116,113" href="lab6 首页.html#数字校园">
+										<area shape="rect" coords="140,9,243,114" href="lab6 首页.html#班级空间">
+									</map>
 								</td>
+								<td><img src="./lab6 image/tup.gif"></td>
+								<td>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+								<td><img src="./lab6 image/tup.gif"></td>
+								<td>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td>
+								<td><img src="./lab6 image/tup.gif"></td>
+
 							</tr>
 						</table>
-					</td>
-					<td width="20%"></td>
+						</tr>
+					</table>
 				</tr>
 			</table>
 		</tr>
