--- a/lab6 首页.html
+++ b/lab6 首页.html
@@ -35,6 +35,72 @@
 		</tr>
 		<!--页面主体部分-->
 		<tr>
+			<table>
+				<tr>
+					<td width="20%"></td>
+					<td>
+						<table>
+							<tr>
+								<td>
+										<h3>学校概况&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<hr></h3>
+										<ul>
+											<li><a href="#"><font size="2.5" color="blue">学校简介</font></a></li>
+											<li><a href="#"><font size="2.5" color="blue">现任领导</font></a></li>
+											<li><a href="#"><font size="2.5" color="blue">光荣历史</font></a></li>
+											<li><a href="#"><font color="green" size="2.5">所获荣誉</font></a></li>
+											<li><a href="#"><font size="2.5" color="blue">图说河中</font></a></li>
+										</ul>
+								</td>
+								<td rowspan="2">
+									<h4>所获荣誉&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<hr></h4>
+									<ul>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[图文]我校被授予“2012年高中教学先进单位”“2012年高中增值奖”等荣誉称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校被评为“2010-2011年度文明单位”</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校被授予“河北省体育传统项目学校”荣誉称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校被授予“影子教师”培训基地</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校荣获“2010-2012年石家庄市创先争优先进基层党组织荣誉称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校荣获石家庄市妇联系统先进集体称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校离退休干部党支部被评为”现金离退休干部党支部“荣誉称号</a>2015-05-10</font></font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校荣获”2010年度住房公积金管理先进单位“荣誉称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[图文]我校荣获石家庄市”2010年度实绩突出领导班子“荣誉称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校荣获首批”河北省现代教育技术示范学校“</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[图文]我校被授予“2012年高中教学先进单位”“2012年高中增值奖”等荣誉称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校被评为“2010-2011年度文明单位”</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校被授予“河北省体育传统项目学校”荣誉称号</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校被授予“影子教师”培训基地</a>2015-05-10</font></li>
+										<li><a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">[组图]我校荣获“2010-2012年石家庄市创先争优先进基层党组织荣誉称号</a>2015-05-10</font></li>
+
+									</ul>
+									<a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue"><font size="2"  color="blue">上一页</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">1</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">2</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<font size="2"  color="blue">3</font>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">4</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">5</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">6</font></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<a href="http://htmlpreview.github.io/?https://github.com/Zikade/Web1/blob/master/lab6%20%E6%96%B0%E9%97%BB%E9%A1%B5.html"><font size="2"  color="blue">下一页</font></a>
+								</td>
+							</tr>
+							<tr>
+								<td>
+								<table>
+									<tr><td>
+									<img src="./lab6 image/tjpic.gif">
+									</td></tr>
+									<tr><td>
+									<img src="./lab6 image/pic.gif">
+									</td></tr>
+									<tr><td><<font size="2.5">
+									[组图]我校被评为“石家庄市<br>2010-2011年度文明单位”
+									</font></td></tr>
+								</table>
+								</td>
+							</tr>
+						</table>
+					</td>
+					<td width="20%"></td>
+				</tr>
+			</table>
 		</tr>
 		<!--页脚部分-->
 		<tr>
