--- a/lab6 新闻内容页.html
+++ b/lab6 新闻内容页.html
@@ -35,11 +35,64 @@
 		</tr>
 		<!--页面主体部分-->
 		<tr>
+			<table>
+				<tr>
+					<td width="20%"></td>
+					<td>
+					<h3><center>【家长学校1306期】我校组织学生“励志踏青”活动
+					</center></h3><hr>
+					<center>作者：教育处  点击数：878  更新时间：2013-4-15</center>
+					<style> p{text-indent:2em} </style>
+					<p>
+						2013年4月14日，教育处和高一年级组共同组织了高一年级及高二实验部学生“励志踏青”活动。
+					</p>
+					<p>
+						此次“励志踏青”活动，行程约30多华里，历时5个小时。同学们从学校大门男行，左转至燕赵大街直行经历史文化街出南城门过子龙大桥，在南桥头右转进入汊河湿地公园景区，然后向西自由活动到神农庄园停车场集合，沿107国道北行至震源路右转，到承德街左转北行，经恒山西路返回学校。
+					</p>
+					<img src="./lab6 image/newspic.jpg">
+					<p>
+						同学们在此此过程中展现出学校和班级的良好精神风貌。一路上，校旗班旗迎风招展，队伍整齐，每个人脸上都洋溢着青春的笑容。沿途和景区，随处都可以看到同学们捡拾垃圾的身影，互相帮助的身影。在景区，同学们尽情的拥抱大自然，呼吸着自由的空气，和好朋友合影留恋。此次活动使同学们在徒步远行中，砥砺了意志品质，于集体踏青时领略了湖光水色。
+					</p>
+					<p>
+						此次活动经教育处和高一年级组缜密筹划、精心组织，全体班主任和随队老师的通力配合，在校医校车有利的后勤保障下，获得圆满成功！！
+					</p>
+					<hr>
+					上一篇：<a href="#"><font color="blue">校园大扫除活动</font></a>
+					&nbsp&nbsp&nbsp&nbsp&nbsp
+					下一篇：<a href="#"><font color="blue">老红军来我校诉说：革命历程</font></a>
+				</td>
+				<td>
+					<table>
+						<tr>
+							<td>
+								<img src="./lab6 image/hot.gif">
+								<ul>
+									<li><a href="#"><font size="2" color="blue">我校举行五四表彰大会既成人仪式</font></a></li>
+									<li><a href="#"><font size="2" color="blue">河北中学4月份家长开放日公告</font></a></li>
+									<li><a href="#"><font size="2" color="blue">教育处组织学生收看《2013年中小学…</font></a></li>
+									<li><a href="#"><font size="2" color="blue">高一年级励志踏青活动花絮</font></a></li>
+									<li><a href="#"><font size="2" color="blue">我校组织高一年级励志踏青活动</font></a></li>
+								</ul>
+							</td>
+							<td width="800"></td>							
+						</tr>
+						<tr>
+						<td>
+							<img src="./lab6 image/tjpic.gif">
+							<img src="./lab6 image/pic.gif"><br>
+							[组图]我校被评为“石家庄市2010-2011年度文明单位”
+							<img src="./lab6 image/pic.gif"><br>
+							[组图]我校被评为“石家庄市2010-2011年度文明单位”
+							<img src="./lab6 image/pic.gif"><br>
+							[组图]我校被评为“石家庄市2010-2011年度文明单位”
+							</td>
+						</tr>
+				</td>
+			</tr>
+			</table>	
 		</tr>
 		<!--页脚部分-->
-		<tr>
-			
-		</tr>
+
 		<tr>
 			<table background="./lab6 image/foot_bg.gif" width="100%" height="50">
 				<tr>
