--- a/lab6 index.html
+++ b/lab6 index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>河北中学</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="./css/style lab7.css"><link rel="stylesheet" type="text/css" href="./css/style lab7.css">
+	<link rel="stylesheet" type="text/css" href="./css/index lab7.css">
 </head>
 <body background-repeat:repeat-x;>
 	<table width="100%" cellpadding="0" cellspacing="0">
@@ -24,7 +26,7 @@
 							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">图书馆</font></a></td>
 							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">校友会</font></a></td>
 							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">河中论坛</font></a></td>
-							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">查询系统</font></a></td>
+							<td><a href="#" a style='text-decoration: none'> <p class="alast">查询系统</p></a></td>
 						</tr>
 						<tr height="210"></tr>
 						</table>
@@ -47,23 +49,23 @@
 									<map name="Map1" id="Map1">
 										<area shape="rect" coords="386，21.430.44" href="list.html?type=河中新闻">
 									</map>
-								<ul>
-									<li><a href="#"><font size="2"  color="blue">【家长学校1306期】大学主要的专业介绍</a>2015-12-10</font></li>
-									<li><a href="#"><font size="2"  color="blue">[图文]化学老师于文英举办观摩课活动</a>2015-12-10</font></li>
-									<li><a href="#"><font size="2"  color="blue">[图文]本部数学组组织公开课教学[</a>2015-12-10</font></li>
-									<li><a href="#"><font size="2"  color="blue">[图文]校工会组织教职工广场舞展示、交流活动</a>2015-12-10</font></li>
-									<li><a href="#"><font size="2"  color="blue">[图文]生物教师开展观摩课活动</a>2015-12-10</font></li>
-									<li><a href="#"><font size="2"  color="blue">[图文]首届”五四杯“青年篮球对抗赛成功举办</a>2015-12-10</font></li>
-									<li><a href="#"><font size="2"  color="blue">[图文]高二理科部召开第二次月考表彰大会</a>2015-12-10</font></li>
-									<li><a href="#"><font size="2"  color="blue">[图文]加强消防培训，确保学生安全</a>2015-12-10</font></li>
-								</ul>
+								<ul><font size=2px>
+									<li><a href="#"><h5 class="p">【家长学校1306期】大学主要的专业介绍</h5></a>2015-12-10</li>
+									<li><a href="#">[图文]化学老师于文英举办观摩课活动</a>2015-12-10</li>
+									<li><a href="#">[图文]本部数学组组织公开课教学</a>2015-12-10</li>
+									<li><a href="#">[图文]校工会组织教职工广场舞展示、交流活动</a>2015-12-10</li>
+									<li><a href="#">[图文]生物教师开展观摩课活动</a>2015-12-10</li>
+									<li><a href="#">[图文]首届”五四杯“青年篮球对抗赛成功举办</a>2015-12-10</li>
+									<li><a href="#">[图文]高二理科部召开第二次月考表彰大会</a>2015-12-10</li>
+									<li><a href="#">[图文]加强消防培训，确保学生安全</a>2015-12-10</li>
+								</font></ul>
 								</td>
 								<td><img src="./lab6 image/notice_title.gif">
-									<ul>
-										<li><a href="#"><font size="2"  color="blue">河北中学男子篮球体育特长生招生简章(2015.04.11)</font></a></li>
-										<li><a href="#"><font size="2"  color="blue">河北中学音乐特长生复试名单(2015-04-08)</font></a></li>
-										<li><a href="#"><font size="2"  color="blue">河北中学2015年艺术特长生招生简章(2015-03-01)</font></a></li>
-									</ul>
+									<ul><font size=2px>
+										<li><a href="#">河北中学男子篮球体育特长生招生简章(2015.04.11)</a></li>
+										<li><a href="#">河北中学音乐特长生复试名单(2015-04-08)</a></li>
+										<li><a href="#">河北中学2015年艺术特长生招生简章(2015-03-01)</a></li>
+									</font></ul>
 								</td>
 								<td width="20%"></td>
 							<td width="30%"></td>
@@ -92,25 +94,25 @@
 							<td width="30%"></td>
 							<td><img src="./lab6 image/news_jy_pic.gif"></td>
 							<td>
-								<ul>
-									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]化学老师于文英举办观摩课活动</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]本部教学组织公开课教学校调研</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]生物老师开展观摩课</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[教学交流][组图][文科部高一年级召开期中考试分析…</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[教与学][图文]【教与学】打破思维定势走出误区…</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[教学交流][组图]石家庄市教科所专家来我</a></font></li>
-								</ul>
+								<ul><font size=2px>
+									<li><a href="#">[公开课教学][图文]化学老师于文英举办观摩课活动</a></li>
+									<li><a href="#">[公开课教学][图文]本部教学组织公开课教学校调研</a></li>
+									<li><a href="#">[公开课教学][图文]生物老师开展观摩课</a></li>
+									<li><a href="#">[教学交流][组图][文科部高一年级召开期中考试分析…</a></li>
+									<li><a href="#">[教与学][图文]【教与学】打破思维定势走出误区…</a></li>
+									<li><a href="#">[教学交流][组图]石家庄市教科所专家来我</a></li>
+								</font></ul>
 							</td>
 							<td><img src="./lab6 image/news_dy_pic.gif"></td>
 							<td>
-								<ul>
-									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]化学老师于文英举办观摩课活动</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]本部教学组织公开课教学校调研</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[公开课教学][图文]生物老师开展观摩课</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[教学交流][组图][文科部高一年级召开期中考试分析…</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[教与学][图文]【教与学】打破思维定势走出误区…</a></font></li>
-									<li><a href="#"><font size="2"  color="blue">[教学交流][组图]石家庄市教科所专家来我</a></font></li>
-								</ul>
+								<ul><font size=2px>
+									<li><a href="#">[公开课教学][图文]化学老师于文英举办观摩课活动</a></li>
+									<li><a href="#">[公开课教学][图文]本部教学组织公开课教学校调研</a></li>
+									<li><a href="#">[公开课教学][图文]生物老师开展观摩课</a></li>
+									<li><a href="#">[教学交流][组图][文科部高一年级召开期中考试分析…</a></li>
+									<li><a href="#">[教与学][图文]【教与学】打破思维定势走出误区…</a></li>
+									<li><a href="#">[教学交流][组图]石家庄市教科所专家来我</a></li>
+								</p></ul>
 							</td>
 							<td width="37.5%"></td>
 						<table width="81.5%">	
