--- a/lab6 content.html
+++ b/lab6 content.html
@@ -3,6 +3,8 @@
 <head>
 	<title>河北中学</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="./css/style lab7.css">
+	<link rel="stylesheet" type="text/css" href="./css/content lab7.css">
 </head>
 <body background-repeat:repeat-x;>
 	<table width="100%" cellpadding="0" cellspacing="0">
@@ -24,7 +26,7 @@
 							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">图书馆</font></a></td>
 							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">校友会</font></a></td>
 							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">河中论坛</font></a></td>
-							<td><a href="#" a style='text-decoration: none'> <font color="white" size="1">查询系统</font></a></td>
+							<td><a href="#" a style='text-decoration: none'> <p class="alast">查询系统</p></a></td>
 						</tr>
 						<tr height="210"></tr>
 						</table>
@@ -39,9 +41,9 @@
 				<tr>
 					<td width="20%"></td>
 					<td>
-					<h3><center>【家长学校1306期】我校组织学生“励志踏青”活动
-					</center></h3><hr>
-					<center>作者：教育处  点击数：878  更新时间：2013-4-15</center>
+					<h1><center>【家长学校1306期】我校组织学生“励志踏青”活动
+					</center></h1><hr>
+					<center><h2>作者：教育处&nbsp 图片来源：本站原创&nbsp  点击数：878 &nbsp 更新时间：2013-4-15</h2></center>
 					<style> p{text-indent:2em} </style>
 					<p>
 						2013年4月14日，教育处和高一年级组共同组织了高一年级及高二实验部学生“励志踏青”活动。
@@ -57,9 +59,9 @@
 						此次活动经教育处和高一年级组缜密筹划、精心组织，全体班主任和随队老师的通力配合，在校医校车有利的后勤保障下，获得圆满成功！！
 					</p>
 					<hr>
-					上一篇：<a href="#"><font color="blue">校园大扫除活动</font></a>
+					<p class="p">上一篇：<a href="#">校园大扫除活动</a>
 					&nbsp&nbsp&nbsp&nbsp&nbsp
-					下一篇：<a href="#"><font color="blue">老红军来我校诉说：革命历程</font></a>
+					下一篇：<a href="#">老红军来我校诉说：革命历程</a></p>
 				</td>
 				<td>
 					<table>
@@ -67,11 +69,11 @@
 							<td>
 								<img src="./lab6 image/hot.gif">
 								<ul>
-									<li><a href="#"><font size="2" color="blue">我校举行五四表彰大会既成人仪式</font></a></li>
-									<li><a href="#"><font size="2" color="blue">河北中学4月份家长开放日公告</font></a></li>
-									<li><a href="#"><font size="2" color="blue">教育处组织学生收看《2013年中小学…</font></a></li>
-									<li><a href="#"><font size="2" color="blue">高一年级励志踏青活动花絮</font></a></li>
-									<li><a href="#"><font size="2" color="blue">我校组织高一年级励志踏青活动</font></a></li>
+									<li><a href="#"><h2>我校举行五四表彰大会既成人仪式</h2></a></li>
+									<li><a href="#"><h2>河北中学4月份家长开放日公告</h2></a></li>
+									<li><a href="#"><h2>教育处组织学生收看《2013年中小学…</h2></a></li>
+									<li><a href="#"><h2>高一年级励志踏青活动花絮</h2></a></li>
+									<li><a href="#"><h2>我校组织高一年级励志踏青活动</h2></a></li>
 								</ul>
 							</td>
 							<td width="800"></td>							
@@ -80,12 +82,12 @@
 						<td>
 							<img src="./lab6 image/tjpic.gif">
 							<img src="./lab6 image/pic.gif"><br>
-							[组图]我校被评为“石家庄市2010-2011年度文明单位”
+							<h2>[组图]我校被评为“石家庄市2010-2011年度文明单位”
 							<img src="./lab6 image/pic.gif"><br>
 							[组图]我校被评为“石家庄市2010-2011年度文明单位”
 							<img src="./lab6 image/pic.gif"><br>
 							[组图]我校被评为“石家庄市2010-2011年度文明单位”
-							</td>
+							</h2></td>
 						</tr>
 				</td>
 			</tr>
