--- a/list.html
+++ b/list.html
@@ -1,50 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>温江红枫</title>
-	<meta charset="utf-8"/>
+    <meta charset="UTF-8">
+    <title>河北中学列表页</title>
+    <link rel="stylesheet" type="text/css" href="css/style lab7.css" />
+    <link rel="stylesheet" type="text/css" href="css/list lab7.css" />
 </head>
+
 <body>
-	<img src="lab3 image/logo.jpg">
-	<img src="lab3 image/suc.jpg">
-	<a href="#" >网站首页</a>
-	<a href="#">关于我们</a>
-	<a href="#">新闻中心</a>
-	<a href="#">苗木基地</a>	
-	<a href="#">产品中心</a>
-	<a href="#">成功案例</a>
-	<a href="#">联系我们</a>
-	<a href="#">行业资讯</a>
-	<img src="lab3 image/suc2.jpg">
-	<br/>
-	<h4>》<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">网站首页</a>-新闻中心</h4>
-	<br/>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">成功案例</a><br/>
-	<img src="lab3 image/f1.jpg" width="200" height="100"><br/>
-	<img src="lab3 image/f1.jpg" width="200" height="100"><br/>
-	<a href="">热点新闻</a><br/>
-	<img src="lab3 image/f3.jpg" width="200" height="100"><br/>
-	<img src="lab3 image/f5.jpg" width="200" height="100"><br/>
-	<a href="">新闻中心</a><br/>
-	<ul>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-		<li><a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">林业科学研究所举办专业技术培训班</a>2017-02-12</li>
-	</ul>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">前一页</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">1</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">2</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">3</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">...</a>
-	<a href="http://htmlpreview.github.io/https://github.com/Zikade/Web1/blob/master/lab1.html">后一页</a>
-</body>
-</html>
+    <table width="100%">
+        <!-- 页头部分 -->
+        <tr>
+            <td background="lab6 image/bg.gif" align="center">
+                <table width="60%" background="lab6 image/banner.jpg">
+                    <tr class="menu">
+                        <td height="75px">首页</td>
+                        <td><a href="index.html">学校概况</a></td>
+                        <td><a href="index.html">规章制度</a></td>
+                        <td><a href="index.html">德育网</a></td>
+                        <td><a href="index.html">教研网</a></td>
+                        <td><a href="index.html">名师风采</a></td>
+                        <td><a href="index.html">高考专栏</a></td>
+                        <td><a href="index.html">图书馆</a></td>
+                        <td><a href="index.html">校友会</a></td>
+                        <td><a href="index.html">河中论坛</td>
+                        <td><a href="index.html"  class="special">查询系统</a></td>
+                    </tr>
+                    <tr>
+                        <td colspan="11" height="210px"></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <!-- 页面主体部分 -->
+        <tr>
+            <td align="center">
+                <table width="60%">
+                    <tr>
+                        <td width="25%" height="450px">
+                            <h3>学校概况</h3>
+                            <hr />
+                            <ul class="leftmenu">
+                                <li><a href="list.html#1">学校简介</a></li>
+                                <li><a href="list.html#2">现任领导</a></li>
+                                <li><a href="list.html#3">光荣历史</a></li>
+                                <li><a href="list.html#4">所获荣誉</a></li>
+                                <li><a href="list.html#5">图说河中</a></li>
+                            </ul>
+                            <img src="lab6 image/tjpic.gif" alt="推荐图文" />
+                            <img src="lab6 image/pic.gif" alt="新闻图片" />
+                            <p>我校被评为“石家庄市2010-2011年度文明单位”</p>
+                        </td>
+                        <td width="75%">
+                            <strong>所获荣誉</strong>
+                            <hr />
+                            <ul>
+                                <li><a href="content.html#1">我校被授予“2012年高中教学先进单位”“2012年高中增值奖”等荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#2">我校被评为“石家庄市2010-2011年度文明单位”</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#3">我校被授予“河北省体育传统项目学校”荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#4">我校被授予“影子教师”培训基地</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#5">我校荣获“2010-2012年石家庄市创先争优先进基层党组织荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#6">我校荣获石家庄市妇联系统先进集体称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#7">我校离退休干部党支部被评为“先进离退休干部党支部”荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#8">我校荣获“2010年度住房公积金管理先进单位”荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#9">我校荣获石家庄市“2010年度实绩突出领导班子”荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#10">我校荣获首批“河北省现代教育技术示范学校”</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#1">我校被授予“2012年高中教学先进单位”“2012年高中增值奖”等荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#2">我校被评为“石家庄市2010-2011年度文明单位”</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#3">我校被授予“河北省体育传统项目学校”荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#4">我校被授予“影子教师”培训基地</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                                <li><a href="content.html#5">我校荣获“2010-2012年石家庄市创先争优先进基层党组织荣誉称号</a>&nbsp;&nbsp;&nbsp;&nbsp;2015-05-10</li>
+                            </ul>
+                            <table>
+                                <tr>
+                                    <td width="60px"><a href="list.html?page=2">上一页</a></td>
+                                    <td width="45px"><a href="list.html?page=1">1</a></td>
+                                    <td width="45px"><a href="list.html?page=2">2</a></td>
+                                    <td width="45px">3</td>
+                                    <td width="45px"><a href="list.html?page=4">4</a></td>
+                                    <td width="45px"><a href="list.html?page=5">5</a></td>
+                                    <td width="45px"><a href="list.html?page=6">6</a></td>
+                                    <td width="60px"><a href="list.html?page=4">下一页</a></td>
+
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <!-- 页脚部分 -->
+        <tr>
+            <td height="70px" align="center" background="lab6 image/foot_bg.gif">
+                <font color="white">Copyright © 2008－2016 http://www.***.com All Rights Reserved 网站备案：冀ICP备00000000号</font>
+            </td>
