--- a/lab9/index.html
+++ b/lab9/index.html
@@ -3,190 +3,8 @@
 <head>
 	<title>河北书法家协会培训中心</title>
 	<meta charset="utf-8">
-<style type="text/css">
-#whole{
-	margin: 0 auto;
-	padding: 0;
-	font:12px "宋体";
-	list-style-type: none;
-	color: #522a06;
-}
-a:link{
-	text-decoration: none
-}
-a:active{
-	color: #522a06;
-}
-a:hover{
-	text-decoration: underline;
-}
-image{
-	border: 0px;
-}
-body{
-	background-image: url(./images/bodybg.gif);
-	margin: 0 auto;
-}
-#header{
-	height: 205px;
-	background-image: url(./images/bg.gif);
-	background-position: center top;
-}
-#banner{
-	width: 1000px;
-	height: 164px;
-	margin: 0 auto;
-}
-.logo{
-	margin: 0 auto;
-	margin-top: 38px;
-	margin-left: 25px;
-}
-#nav{
-	height: 40px;
-	background-image: url(./images/nav.jpg);
-}
-
-.nav_body{
-	width: 1000px;
-	margin: 0 auto;
-	height: 800px;
-	font-weight: 700;
-	color: #fff;
-	font-size: 140%;
-	padding-top:13px;
-}
-.sousuo{
-	position: absolute;
-	right: 0px;
-}
-.nav_content{
-	height: 800px;
-	font-weight: 700;
-	color: #fff;
-	font-size: 140%;
-	padding-top:13px;
-}
-a:link{
-	color: #fff;
-}
-a:active{
-	color: #f9f603;
-}
-a:active{
-	text-decoration: none;
-}
-.nav_search{
-	height: 19px;
-	width: 140px;
-	background-color: #f8f5ee;
-	}
-.search{
-	width: 44px;
-	height: 21px;
-	background-color: #000;
-	color: #fff;
-	border: 1px solid #f8f5ee;
-}
-#content{
-	height: 1000px;
-	margin: 0 150px;
-	clear: both;
-}
-#content_top{
-	overflow: hidden;
-}
-.news_pic{
-	width: 324px;
-	height: 227px;
-	background-image: url(./images/news_bg.png);
-	padding-top: 15px;
-	float: left;
-}
-.news_list{
-	width: 400px;
-	margin-left: 38px;
-	float: left;
-	color: #522a06;
-	color: #522a06
-}
-li{
-	float: left;
-	line-height: 25px;
-	font-size: 12px;
-}
-.news_announce{
-	width: 277px;
-	margin-top: 20px;
-	float: right;
-}
-.announce{
-	background-image: url(./images/board_bg.png);
-	height: 205px;
-	float: left;
-}
-#content_bottom_left{
-	height: 715px;
-	float: left;
-}
-.academic{
-	width: 340px;
-	float: left;
-}
-#academicpic{
-	float: right;
-}
-#more{
-	float: left;
-	position: absolute;
-	height: 0px;
-}
-.book_news{
-	width: 340px;
-	margin-left: 25px;
-	float: left;
-}
-.fengcai{
-	width: 700px;
-	clear: both;
-}
-#content_bottom_right{
-	width: 280px;
-	margin-top:20px;
-	float:right; 
-}
-.mingjia{
-	height: 23px;
-}
-.photo{
-	width: 280px;
-	margin: 0 auto;
-	background-image: url(./images/show_bg.png);
-	height: 365px;
-}
-.word{
-		color: red;
-		font-size: 15px;
-		font-weight: bolder;
-}
-.pra{
-	padding:0px 25px;
-	line-height: 20px;
-	font-size: 15px;
-}
-.ouyang{
-	width: 362px;
-	background-image: url(./images/show_bg.png);
-}
-#footer{
-	height: 105px;
-	clear: both;
-	background-image: url(./imaged/foot.gif);
-}
-.lianjie{
-	font-size: 100%;
-}
-</style>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/通用.css">
 </head>
 <body>
 	<div id="whole">
@@ -211,7 +29,7 @@ li{
 					<a href="#">燕赵风采</a>|
 					<a href="#">经典解读与示范</a>|
 					<a href="#">谏言互动</a>
-
+				</div>
 					<!--搜索框-->
 					<div id="sousuo">
 					<form>
@@ -339,7 +157,7 @@ li{
 			</div>
 			<p> Copyright 2016-2017&nbsp; Hebshufajia.&nbsp;com,ALL &nbsp;&nbsp;Rights &nbsp;Reserved</p>
 				<p>冀ICP备05067795号&nbsp; 冀公网安备110402440008号</p>
-			</center>
+		</center>
 		</div>
 	</div>
 </body>
