--- a/lab9/index.html
+++ b/lab9/index.html
@@ -98,7 +98,7 @@
 				<!--书坛新闻-->
 				<div class="book_news">
 						<img src="./images/book_news.png">
-						<div id="more">
+						<div class="more">
 							<img src="./images/more.png">
 						</div>
 				<ul>
