--- a/课程设计/index.html
+++ b/课程设计/index.html
@@ -9,7 +9,7 @@
 <body>
 	<!--logo-->
 	<div id="logo">
-			<img src="./images/logo.jpg">
+			<img src="./images/logo.png">
 	</div>
 	<!--页头-->
 	<div id="head">
@@ -19,7 +19,7 @@
 		<!--链接和搜索-->
 		<div>
 		<div id="link">
-						|首页 &nbsp&nbsp&nbsp&nbsp&nbsp |
+						|首页 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |
 			<a href="file:///F:/Git/Git%20Gui/%E8%AF%BE%E7%A8%8B%E8%AE%BE%E8%AE%A1/list.html#">触手视频</a>&nbsp&nbsp&nbsp&nbsp&nbsp |
 			<a href="#">歌曲下载</a>&nbsp&nbsp&nbsp&nbsp&nbsp |
 			<a href="#">论坛</a>
