--- a/课程设计/list.html
+++ b/课程设计/list.html
@@ -9,7 +9,7 @@
 <body>
 	<!--logo-->
 	<div id="logo">
-			<img src="./images/logo.jpg">
+			<img src="./images/logo.png">
 	</div>
 	<!--页头-->
 	<div id="head">
